example/istio/1.x/grpc/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testflask-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "testflask.tmp.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testflask-gateway-https
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-cert # must be the same as secret
    hosts:
    - "testflask.tmp.com"
